[package]
name = "threeqlite"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["sqlite-vfs"]

[dependencies.sqlite-vfs]
path = "./sqlite-vfs/"

[dependencies]
aws-config = "1.5.10"
aws-sdk-s3 = "1.63.0"
tokio = { version = "1.41.1", features = ["full"] }
snafu = { version = "0.8.5", features = ["futures"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
bincode = "1.3.3"
rand = "0.8.5"
tokio-stream = { version = "0.1.16", features = ["full"] }
rusqlite = "0.32.1"
dotenvy = "0.15.7"
md5 = "0.7.0"
base64 = "0.22.1"
